--- a/styles/indexStayle.css
+++ b/styles/indexStayle.css
@@ -1,43 +1,52 @@
 html,
 body {
-    height: 100%;
+    height: 140%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
-
-.page {
+.page{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+.content{
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin-right: 0;
+    
 }
-
-/* .navbar {
-    background-image: linear-gradient(to right, white, rgb(179, 218, 250));
-} */
-
-.user-info{
+.navbar {
+    /* background-image: linear-gradient(to right, white, rgb(205, 211, 215)); */
+    z-index: 1;
+}
+.user-info {
     padding-top: 8px;
 }
-.user-info>h6{
+.user-info>h6 {
     font-size: 12px;
+    color: rgb(255, 255, 255);
 }
-
 footer {
+    width: 100%;
     margin-top: auto;
+    bottom: 0;
+    padding-left: -15px;
+    padding-right: -15px;
 }
-
 .search {
     margin-left: -50px;
 }
-
 .avatar {
     width: 250px;
 }
-
 i {
     color: black;
 }
-.profil-box{
+.profil-box {
     width: 150px;
-    margin-top: 5%;
+    /* margin-top: ; */
     z-index: 1;
     position: absolute;
     left: 2%;
@@ -46,41 +55,58 @@ i {
     display: none;
 
 }
-
-.list-group-item>a {
+.sidebar-item>a {
     text-decoration: none;
-    color: black;
-
 }
+/* .sidebar-item {
+    list-style-type: none;
+    display: inline-block;
+    margin: 5px 10px;
 
-.list-group-item>a:hover {
+} */
+.sidebar-item>a {
+    color: #333;
     text-decoration: none;
-    color: black;
-
+    display: inline-block;
+    position: relative;
 }
-
+.sidebar-item>a::after {
+    content: "";
+    display: block;
+    margin: auto;
+    height: 4px;
+    width: 0;
+    top: 5px;
+    background: transparent;
+}
+.sidebar-item:hover , .active {
+    background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
+}
+/*.sidebar-item>a:hover::after,
+.sidebar-item>a.active-nav::after {
+    width: 100%;
+    background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
+}*/
 .sidebar {
     /* display: none; */
-    width: 200px;
+    /* width: 10px; */
+    list-style: none;
     padding-top: 100px;
     height: 100%;
     /* background-image: linear-gradient(to right, white, rgb(236, 246, 254)); */
+    /* background-color:  rgb(231, 234, 235); */
 }
-
 .sidebar i {
-    padding-right: 20px;
+    padding-right: 10px;
 }
-
 .sidebar-link {
-
-    padding: 20px;
+    /* padding: 20px; */
+    left: 10%;
 }
-
 .menu {
     display: none;
+    list-style: none;
 }
-
-
 /* footer {
     position:none;
     bottom: 0;
@@ -89,7 +115,6 @@ i {
 .form-group .icon {
     padding-left: 2.375rem;
 }
-
 .form-group .form-control-icon {
     position: absolute;
     z-index: 2;
@@ -101,34 +126,34 @@ i {
     pointer-events: none;
     color: #aaa;
 }
-
-
 .registration-form {
     display: none;
 }
-.registration-form, .login-form {
-   width: 300px;
+.registration-form,
+.login-form {
+    width: 300px;
 }
-.error-page{
+.error-page {
     margin: auto;
 }
-.vertical-form .vertical-form-icon{
+.vertical-form .vertical-form-icon {
     height: 600px;
 }
-.time-line{
+.time-line {
     display: none;
 }
-#file-uploade-1>div , #file-uploade-2>div , #file-uploade-3>div{
+#file-uploade-1>div,
+#file-uploade-2>div,
+#file-uploade-3>div {
     height: 300px;
 }
-p{
-    font-size:medium;
+p {
+    font-size: medium;
 }
-.date-time{
-   margin: auto;
-    font-size:x-small;
+.date-time {
+    margin: auto;
+    font-size: x-small;
 }
-
 .toggleBox>input[type="checkbox"] {
     position: relative;
     width: 90px;
@@ -140,13 +165,11 @@ p{
     transition: .4s;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-  }
-  
-  .toggleBox>input:checked[type="checkbox"] {
+}
+.toggleBox>input:checked[type="checkbox"] {
     background: #3498db;
-  }
-  
-  .toggleBox>input[type="checkbox"]::before {
+}
+.toggleBox>input[type="checkbox"]::before {
     z-index: 2;
     position: absolute;
     content: "";
@@ -158,32 +181,32 @@ p{
     transform: scale(1.1);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .4s;
-  }
-  
-  .toggleBox>input:checked[type="checkbox"]::before {
+}
+.toggleBox>input:checked[type="checkbox"]::before {
     left: 51px;
-  }
-  
-  .toggleBox{
+}
+.toggleBox {
     position: relative;
     display: inline;
-  }
-  
-  .toggleBox>label {
+}
+.toggleBox>label {
     position: absolute;
     color: #fff;
     font-weight: 300;
     font-size: 20px;
     pointer-events: none;
-  }
-  
-  .onbtn {
+}
+.onbtn {
     bottom: 0px;
     left: 5px;
-  }
-  
-  .ofbtn {
+}
+.ofbtn {
     bottom: 0px;
     right: 10px;
     color: #34495e;
+}
+.navbar {
+    padding: 0;
   }
+  
+  
