--- a/styles/indexStayle.css
+++ b/styles/indexStayle.css
@@ -5,15 +5,23 @@ body {
     margin: 0;
     padding: 0;
 }
+.formsInputs-body{
+    height: 165%;
+}
+
 .page{
     height: 100%;
     width: 100%;
     margin: 0;
+    padding: 0;
+    display: flex;
 }
 .content{
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
+    padding-right: 0;
     margin-right: 0;
     
 }
@@ -24,6 +32,7 @@ body {
 .navbar-toggler{
     display: none;
 }
+
 .user-info {
     padding-top: 8px;
 }
@@ -61,7 +70,7 @@ i {
     display: none;
 
 }
-.sidebar-item>a {
+.sidebar-item>a , .list-group-item>a {
     text-decoration: none;
 }
 /* .sidebar-item {
@@ -70,12 +79,12 @@ i {
     margin: 5px 10px;
 
 } */
-.sidebar-item>a {
-    color: #333;
+/* .sidebar-item>a {
     text-decoration: none;
     display: inline-block;
     position: relative;
-}
+    
+} */
 .sidebar-item>a::after {
     content: "";
     display: block;
@@ -87,27 +96,27 @@ i {
 }
 .sidebar-item:hover , .active {
     background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
+    /* padding-left: 10px; */
 }
 /*.sidebar-item>a:hover::after,
 .sidebar-item>a.active-nav::after {
     width: 100%;
     background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
 }*/
-.sidebar {
-    /* display: none; */
-    /* width: 10px; */
+.sidebar>ul {
+    width: 200px;
     list-style: none;
-    padding-top: 100px;
-    height: 100%;
-    /* background-image: linear-gradient(to right, white, rgb(236, 246, 254)); */
-    /* background-color:  rgb(231, 234, 235); */
+    margin-top: 100px;
+    /* height: 100%; */
+    padding-left: 0;
+    margin-left: 0;
 }
 .sidebar i {
-    padding-right: 10px;
+    /* padding-right: 10px; */
 }
 .sidebar-link {
     /* padding: 20px; */
-    left: 10%;
+    /* left: 10%; */
 }
 .menu {
     display: none;
@@ -156,14 +165,14 @@ i {
 p {
     font-size: medium;
 }
-.date-time {
+/* .date-time {
     margin: auto;
     font-size: x-small;
-}
+} */
 .toggleBox>input[type="checkbox"] {
     position: relative;
-    width: 90px;
-    height: 35px;
+    width: 88px;
+    height: 30px;
     background: #bdc3c7;
     -webkit-appearance: none;
     border-radius: 20px;
@@ -180,8 +189,8 @@ p {
     position: absolute;
     content: "";
     left: 0;
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 30px;
     background: #fff;
     border-radius: 50%;
     transform: scale(1.1);
@@ -214,24 +223,110 @@ p {
 .navbar {
     padding: 0;
   }
- 
+  .calendar{
+    display:flex ;
+  }
+  /* .calendar div{
+    width: 400px;
+  } */
+  .time-line-box , .task{
+    width: 400px;
+  }
+  .logo-sidebar{
+    display: none;
+}
+ .buttons{
+    display: flex;
+    justify-content: space-between;
+ }
+ .horizontal-form,.vertical-form{
+    width: 75%;
+ }
+ .change-avatar{
+    margin-left: -15px;
+ }
+ @media screen and (max-width: 1000px) {
+    .calendar{
+        flex-direction: column;
+      }
+      .formsInputs-body,.fonts-body{
+        height: 100%;
+    }
+    .content .container{
+        padding-left: 3rem!important;
+        padding-right: 3rem!important;
+    }
+ }
   @media screen and (max-width: 480px) {
+    nav , .page{
+        width: 100%;
+    }
+    .profil-box {
+        left: 55%;
+    }
+    .content{
+        padding-left: 0rem!important;
+        padding-right: 0rem!important; 
+    }
+    .content .container{
+        display: block;
+    }
+    .sidebar>ul {
+        margin-top: 50px;
+    }
+    .formsInputs-body{
+        height: 225%;
+    }
+    .fonts-body{
+        height: 200%;
+    }
+
+    .new-content-width{
+        width: 90%;
+    }
+    .search{
+        display: none;
+    }
+    .avatar{
+        margin: 0;
+        position:absolute;
+        right:0px;
+        width: 150px;
+        margin-right: 0;
+        padding-right: 0;
+    }
+    /* .container{
+        padding-left: 0;
+        padding-right: 0;
+    } */
+    .avatar-img{
+        height: 40px;
+        width: auto;
+        align-items: center;
+        margin-top: 6px;
+        padding-right: 0;
+    }
+    .user-info>h6{
+        font-size: x-small;
+        padding-left: 0;
+    }
     .sidebar {
-        width: 100px;
+      width: 100%;
       display: none;
       padding: 0;
+      /* padding-right: 15px; */
       margin: 0;
     }
     .sidebar-item {
         padding: 0;
         margin: 0;
       }
-      .dropdown-toggle{
+      /* .dropdown-toggle{
         padding-left:0;
-    }
-      .sidebar-link span{
+    } */
+      /* .sidebar-link span{
         display: none;
-      }
+      } */
     .search input{
         width: 80px;
     }
@@ -242,9 +337,43 @@ p {
     .navbar-toggler{
         display: block;
     }
-    .sidebar-item:hover , .active {
-        padding-left: 5px;
-        background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
+    /* .sidebar-item:hover , .active {
+        width: 50%;
+    } */
+    /* .index-container{
+        padding-: 60px;
+    } */
+    .buttons{
+        flex-direction: column;
+        height: 230px;
+        justify-content: space-between;
+     }
+     .buttons>button {
+        width: 50%;
+        margin: auto;
+       
+     }
+      /* .calendar>div{
+        width: 350px;
+      } */
+      /* .px-5{
+        padding-left: 20px!important;
+      } */
+      .time-line-box , .task{
+        width: 90%;
+        margin: auto;
+      }
+      .logo-nav{
+        display: none;
     }
+    .logo-sidebar{
+        display: block;
+        margin-left: auto;
+        margin-right: -20px;
+    }
+    .horizontal-form,.vertical-form{
+        width: 97%;
+     }
+    
   }  
   
