--- a/styles/indexStayle.css
+++ b/styles/indexStayle.css
@@ -5,41 +5,47 @@ body {
     margin: 0;
     padding: 0;
 }
-.formsInputs-body{
+
+.formsInputs-body {
     height: 165%;
 }
 
-.page{
+.page {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
 }
-.content{
+
+.content {
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
     padding-right: 0;
     margin-right: 0;
-    
+
 }
+
 .navbar {
     /* background-image: linear-gradient(to right, white, rgb(205, 211, 215)); */
     z-index: 1;
 }
-.navbar-toggler{
+
+.navbar-toggler {
     display: none;
 }
 
 .user-info {
     padding-top: 8px;
 }
+
 .user-info>h6 {
     font-size: 12px;
     color: rgb(255, 255, 255);
 }
+
 footer {
     width: 100%;
     margin-top: auto;
@@ -47,18 +53,26 @@ footer {
     padding-left: -15px;
     padding-right: -15px;
 }
+
 .search {
     margin-left: -50px;
 }
-.dropdown-toggle{
+
+.dropdown-toggle {
     padding-left: 30px;
 }
+
 .avatar {
-    width: 250px;
+    width: 160px;
 }
+.avatar-img{
+    height: 50px;
+}
+
 i {
     color: black;
 }
+
 .profil-box {
     width: 150px;
     /* margin-top: ; */
@@ -66,13 +80,17 @@ i {
     position: absolute;
     left: 2%;
 }
+
 .profil-box>div {
     display: none;
 
 }
-.sidebar-item>a , .list-group-item>a {
+
+.sidebar-item>a,
+.list-group-item>a {
     text-decoration: none;
 }
+
 /* .sidebar-item {
     list-style-type: none;
     display: inline-block;
@@ -94,10 +112,13 @@ i {
     top: 5px;
     background: transparent;
 }
-.sidebar-item:hover , .active {
-    background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
+
+.sidebar-item:hover,
+.active {
+    background-image: linear-gradient(to right, rgb(179, 218, 250), rgb(3, 142, 188), rgb(179, 218, 250));
     /* padding-left: 10px; */
 }
+
 /*.sidebar-item>a:hover::after,
 .sidebar-item>a.active-nav::after {
     width: 100%;
@@ -111,17 +132,21 @@ i {
     padding-left: 0;
     margin-left: 0;
 }
+
 .sidebar i {
     /* padding-right: 10px; */
 }
+
 .sidebar-link {
     /* padding: 20px; */
     /* left: 10%; */
 }
+
 .menu {
     display: none;
     list-style: none;
 }
+
 /* footer {
     position:none;
     bottom: 0;
@@ -130,6 +155,7 @@ i {
 .form-group .icon {
     padding-left: 2.375rem;
 }
+
 .form-group .form-control-icon {
     position: absolute;
     z-index: 2;
@@ -141,38 +167,46 @@ i {
     pointer-events: none;
     color: #aaa;
 }
+
 .registration-form {
     display: none;
 }
+
 .registration-form,
 .login-form {
     width: 300px;
 }
+
 .error-page {
     margin: auto;
 }
+
 .vertical-form .vertical-form-icon {
     height: 600px;
 }
+
 .time-line {
     display: none;
 }
+
 #file-uploade-1>div,
 #file-uploade-2>div,
 #file-uploade-3>div {
     height: 300px;
 }
+
 p {
     font-size: medium;
 }
+
 /* .date-time {
     margin: auto;
     font-size: x-small;
 } */
 .toggleBox>input[type="checkbox"] {
     position: relative;
-    width: 88px;
-    height: 30px;
+    width: 70px;
+    height: 25px;
     background: #bdc3c7;
     -webkit-appearance: none;
     border-radius: 20px;
@@ -181,206 +215,257 @@ p {
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
+
 .toggleBox>input:checked[type="checkbox"] {
     background: #3498db;
 }
+
 .toggleBox>input[type="checkbox"]::before {
     z-index: 2;
     position: absolute;
     content: "";
     left: 0;
-    width: 35px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     background: #fff;
     border-radius: 50%;
     transform: scale(1.1);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .4s;
 }
+
 .toggleBox>input:checked[type="checkbox"]::before {
-    left: 51px;
+    left: 45px;
 }
+
 .toggleBox {
     position: relative;
     display: inline;
 }
-.toggleBox>label {
+
+/* .toggleBox>label {
     position: absolute;
     color: #fff;
     font-weight: 300;
     font-size: 20px;
     pointer-events: none;
-}
-.onbtn {
+} */
+
+/* .onbtn {
     bottom: 0px;
-    left: 5px;
-}
+    left: 2px;
+} */
+
 .ofbtn {
     bottom: 0px;
     right: 10px;
     color: #34495e;
 }
+
 .navbar {
     padding: 0;
-  }
-  .calendar{
-    display:flex ;
-  }
-  /* .calendar div{
+}
+
+.calendar {
+    display: flex;
+}
+
+/* .calendar div{
     width: 400px;
   } */
-  .time-line-box , .task{
+/* .time-line-box , .task{
     width: 400px;
-  }
-  .logo-sidebar{
+  } */
+.logo-sidebar {
     display: none;
 }
- .buttons{
+
+.buttons {
     display: flex;
     justify-content: space-between;
- }
- .horizontal-form,.vertical-form{
+}
+
+.horizontal-form,
+.vertical-form {
     width: 75%;
- }
- .change-avatar{
+}
+
+.change-avatar {
     margin-left: -15px;
- }
- .doughnut-charts{
+}
+
+.doughnut-charts {
     width: 450px;
- }
- @media screen and (max-width: 1000px) {
-    .calendar{
+}
+
+@media screen and (max-width: 1000px) {
+    .calendar {
         flex-direction: column;
-      }
-      .formsInputs-body,.fonts-body{
+    }
+
+    .formsInputs-body,
+    .fonts-body {
         height: 100%;
     }
-    .content .container{
-        padding-left: 3rem!important;
-        padding-right: 3rem!important;
+
+    .content .container {
+        padding-left: 3rem !important;
+        padding-right: 3rem !important;
     }
- }
-  @media screen and (max-width: 480px) {
-    nav , .page{
+}
+
+@media screen and (max-width: 480px) {
+
+    nav,
+    .page {
         width: 100%;
     }
+
     .profil-box {
         left: 55%;
     }
-    .content{
-        padding-left: 0rem!important;
-        padding-right: 0rem!important; 
+
+    .content .container {
+        padding-left: 1.5rem !important;
+        padding-right: 1.5rem !important;
     }
-    .content .container{
+    .navbar .container {
+        padding-left: 0rem !important;
+        padding-right: 0rem !important;
+    }
+    .content {
+        padding-left: 0rem !important;
+        padding-right: 0rem !important;
+    }
+
+    .content .container {
         display: block;
     }
+
     .sidebar>ul {
         margin-top: 50px;
     }
-    .formsInputs-body{
+
+    .formsInputs-body {
         height: 225%;
     }
-    .fonts-body{
+
+    .fonts-body {
         height: 200%;
     }
 
-    .new-content-width{
+    .new-content-width {
         width: 90%;
     }
-    .search{
+
+    .search {
         display: none;
     }
-    .avatar{
+
+    .avatar {
         margin: 0;
-        position:absolute;
-        right:0px;
+        position: absolute;
+        right: 0px;
         width: 150px;
         margin-right: 0;
         padding-right: 0;
     }
+
     /* .container{
         padding-left: 0;
         padding-right: 0;
     } */
-    .avatar-img{
+    .avatar-img {
         height: 40px;
         width: auto;
-        align-items: center;
+        /* align-items: center; */
         margin-top: 6px;
-        padding-right: 0;
+        float: right;
     }
-    .user-info>h6{
+
+    .user-info>h6 {
         font-size: x-small;
         padding-left: 0;
     }
+
     .sidebar {
-      width: 100%;
-      display: none;
-      padding: 0;
-      /* padding-right: 15px; */
-      margin: 0;
+        width: 100%;
+        display: none;
+        padding: 0;
+        /* padding-right: 15px; */
+        margin: 0;
     }
+
     .sidebar-item {
         padding: 0;
         margin: 0;
-      }
-      /* .dropdown-toggle{
+    }
+
+    /* .dropdown-toggle{
         padding-left:0;
     } */
-      /* .sidebar-link span{
+    /* .sidebar-link span{
         display: none;
       } */
-    .search input{
+    .search input {
         width: 80px;
     }
-    .search button{
+
+    .search button {
         width: 60;
         margin-left: 5px;
     }
-    .navbar-toggler{
+
+    .navbar-toggler {
         display: block;
     }
+
     /* .sidebar-item:hover , .active {
         width: 50%;
     } */
     /* .index-container{
         padding-: 60px;
     } */
-    .buttons{
+    .buttons {
         flex-direction: column;
         height: 230px;
         justify-content: space-between;
-     }
-     .buttons>button {
+    }
+
+    .buttons>button {
         width: 50%;
         margin: auto;
-       
-     }
-      /* .calendar>div{
+
+    }
+
+    /* .calendar>div{
         width: 350px;
       } */
-      /* .px-5{
+    /* .px-5{
         padding-left: 20px!important;
       } */
-      .time-line-box , .task{
+    /* .time-line-box , .task{
         width: 90%;
         margin: auto;
-      }
-      .logo-nav{
+      } */
+    .logo-nav {
         display: none;
     }
-    .logo-sidebar{
+
+    .logo-sidebar {
         display: block;
         margin-left: auto;
         margin-right: -20px;
     }
-    .horizontal-form,.vertical-form{
+
+    .horizontal-form,
+    .vertical-form {
         width: 97%;
-     }
-     .doughnut-charts{
+    }
+
+    .doughnut-charts {
         width: 200px;
         text-align: center;
-     }
-    
-  }  
-  
+    }
+
+}
