--- a/styles/indexStayle.css
+++ b/styles/indexStayle.css
@@ -1,108 +1,50 @@
-html,
-body {
-    height: 140%;
-    width: 100vw;
+*{
     margin: 0;
     padding: 0;
 }
-
-.formsInputs-body {
-    height: 165%;
-}
-
-.page {
+html {
     height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+}
+body {
+    min-height: 100%;
+}
+.page {
+    min-height: 100%;
     display: flex;
 }
-
 .content {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
-    padding-right: 0;
-    margin-right: 0;
-
+    min-height: 100%;
 }
-
-.navbar {
-    /* background-image: linear-gradient(to right, white, rgb(205, 211, 215)); */
-    z-index: 1;
+footer {
+    margin-top: auto;
 }
-
 .navbar-toggler {
     display: none;
 }
-
-.user-info {
-    padding-top: 8px;
-}
-
 .user-info>h6 {
     font-size: 12px;
-    color: rgb(255, 255, 255);
 }
-
-footer {
-    width: 100%;
-    margin-top: auto;
-    bottom: 0;
-    padding-left: -15px;
-    padding-right: -15px;
-}
-
-.search {
-    margin-left: -50px;
-}
-
-.dropdown-toggle {
-    padding-left: 30px;
-}
-
 .avatar {
     width: 160px;
 }
-.avatar-img{
+.avatar-img {
     height: 50px;
 }
-
-i {
-    color: black;
-}
-
 .profil-box {
     width: 150px;
-    /* margin-top: ; */
     z-index: 1;
     position: absolute;
     left: 2%;
 }
-
 .profil-box>div {
     display: none;
-
 }
-
 .sidebar-item>a,
 .list-group-item>a {
     text-decoration: none;
 }
-
-/* .sidebar-item {
-    list-style-type: none;
-    display: inline-block;
-    margin: 5px 10px;
-
-} */
-/* .sidebar-item>a {
-    text-decoration: none;
-    display: inline-block;
-    position: relative;
-    
-} */
 .sidebar-item>a::after {
     content: "";
     display: block;
@@ -112,50 +54,21 @@ i {
     top: 5px;
     background: transparent;
 }
-
 .sidebar-item:hover,
 .active {
     background-image: linear-gradient(to right, rgb(179, 218, 250), rgb(3, 142, 188), rgb(179, 218, 250));
-    /* padding-left: 10px; */
 }
-
-/*.sidebar-item>a:hover::after,
-.sidebar-item>a.active-nav::after {
-    width: 100%;
-    background-image: linear-gradient(to right, rgb(179, 218, 250),rgb(3, 142, 188),rgb(179, 218, 250));
-}*/
 .sidebar>ul {
     width: 200px;
     list-style: none;
-    margin-top: 100px;
-    /* height: 100%; */
-    padding-left: 0;
-    margin-left: 0;
 }
-
-.sidebar i {
-    /* padding-right: 10px; */
-}
-
-.sidebar-link {
-    /* padding: 20px; */
-    /* left: 10%; */
-}
-
 .menu {
     display: none;
     list-style: none;
 }
-
-/* footer {
-    position:none;
-    bottom: 0;
-    width: 100%;
-} */
 .form-group .icon {
     padding-left: 2.375rem;
 }
-
 .form-group .form-control-icon {
     position: absolute;
     z-index: 2;
@@ -167,42 +80,26 @@ i {
     pointer-events: none;
     color: #aaa;
 }
-
 .registration-form {
     display: none;
 }
-
-.registration-form,
-.login-form {
-    width: 300px;
-}
-
 .error-page {
     margin: auto;
 }
-
 .vertical-form .vertical-form-icon {
     height: 600px;
 }
-
 .time-line {
     display: none;
 }
-
 #file-uploade-1>div,
 #file-uploade-2>div,
 #file-uploade-3>div {
     height: 300px;
 }
-
 p {
     font-size: medium;
 }
-
-/* .date-time {
-    margin: auto;
-    font-size: x-small;
-} */
 .toggleBox>input[type="checkbox"] {
     position: relative;
     width: 70px;
@@ -215,11 +112,9 @@ p {
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
-
 .toggleBox>input:checked[type="checkbox"] {
     background: #3498db;
 }
-
 .toggleBox>input[type="checkbox"]::before {
     z-index: 2;
     position: absolute;
@@ -233,135 +128,42 @@ p {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .4s;
 }
-
 .toggleBox>input:checked[type="checkbox"]::before {
     left: 45px;
 }
-
 .toggleBox {
     position: relative;
     display: inline;
 }
-
-/* .toggleBox>label {
-    position: absolute;
-    color: #fff;
-    font-weight: 300;
-    font-size: 20px;
-    pointer-events: none;
-} */
-
-/* .onbtn {
-    bottom: 0px;
-    left: 2px;
-} */
-
 .ofbtn {
     bottom: 0px;
     right: 10px;
     color: #34495e;
 }
-
-.navbar {
-    padding: 0;
-}
-
 .calendar {
     display: flex;
 }
-
-/* .calendar div{
-    width: 400px;
-  } */
-/* .time-line-box , .task{
-    width: 400px;
-  } */
 .logo-sidebar {
     display: none;
 }
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-.horizontal-form,
-.vertical-form {
-    width: 75%;
-}
-
 .change-avatar {
     margin-left: -15px;
 }
-
 .doughnut-charts {
     width: 450px;
 }
-
-@media screen and (max-width: 1000px) {
-    .calendar {
-        flex-direction: column;
-    }
-
-    .formsInputs-body,
-    .fonts-body {
-        height: 100%;
-    }
-
-    .content .container {
-        padding-left: 3rem !important;
-        padding-right: 3rem !important;
-    }
-}
-
-@media screen and (max-width: 480px) {
-
+@media screen and (max-width: 500px) {
     nav,
     .page {
         width: 100%;
     }
-
     .profil-box {
-        left: 55%;
+        width: 100px;
+        left:0
     }
-
-    .content .container {
-        padding-left: 1.5rem !important;
-        padding-right: 1.5rem !important;
-    }
-    .navbar .container {
-        padding-left: 0rem !important;
-        padding-right: 0rem !important;
-    }
-    .content {
-        padding-left: 0rem !important;
-        padding-right: 0rem !important;
-    }
-
-    .content .container {
-        display: block;
-    }
-
-    .sidebar>ul {
-        margin-top: 50px;
-    }
-
-    .formsInputs-body {
-        height: 225%;
-    }
-
-    .fonts-body {
-        height: 200%;
-    }
-
-    .new-content-width {
-        width: 90%;
-    }
-
     .search {
         display: none;
     }
-
     .avatar {
         margin: 0;
         position: absolute;
@@ -370,102 +172,43 @@ p {
         margin-right: 0;
         padding-right: 0;
     }
-
-    /* .container{
-        padding-left: 0;
-        padding-right: 0;
-    } */
     .avatar-img {
         height: 40px;
         width: auto;
-        /* align-items: center; */
         margin-top: 6px;
         float: right;
     }
-
     .user-info>h6 {
         font-size: x-small;
         padding-left: 0;
     }
-
     .sidebar {
         width: 100%;
+        height: 100vh;
         display: none;
         padding: 0;
-        /* padding-right: 15px; */
         margin: 0;
     }
-
     .sidebar-item {
         padding: 0;
         margin: 0;
     }
-
-    /* .dropdown-toggle{
-        padding-left:0;
-    } */
-    /* .sidebar-link span{
-        display: none;
-      } */
-    .search input {
-        width: 80px;
-    }
-
-    .search button {
-        width: 60;
-        margin-left: 5px;
-    }
-
     .navbar-toggler {
         display: block;
     }
-
-    /* .sidebar-item:hover , .active {
-        width: 50%;
-    } */
-    /* .index-container{
-        padding-: 60px;
-    } */
-    .buttons {
-        flex-direction: column;
-        height: 230px;
-        justify-content: space-between;
-    }
-
     .buttons>button {
         width: 50%;
         margin: auto;
-
     }
-
-    /* .calendar>div{
-        width: 350px;
-      } */
-    /* .px-5{
-        padding-left: 20px!important;
-      } */
-    /* .time-line-box , .task{
-        width: 90%;
-        margin: auto;
-      } */
     .logo-nav {
         display: none;
     }
-
     .logo-sidebar {
         display: block;
         margin-left: auto;
-        margin-right: -20px;
     }
-
-    .horizontal-form,
-    .vertical-form {
-        width: 97%;
-    }
-
     .doughnut-charts {
         width: 200px;
         text-align: center;
     }
-
 }
